--- a/index.html
+++ b/index.html
@@ -127,16 +127,27 @@
         this.x += this.dx * deltaTime;
         this.y += this.dy * deltaTime;
       }
+      // draw() {
+      //   if (fireballImg.complete && fireballImg.naturalWidth !== 0) {
+      //     ctx.drawImage(fireballImg, this.x, this.y, this.size, this.size);
+      //   } else {
+      //     ctx.fillStyle = "orange";
+      //     ctx.beginPath();
+      //     ctx.arc(this.x + this.size / 2, this.y + this.size / 2, this.size / 2, 0, 2 * Math.PI);
+      //     ctx.fill();
+      //   }
+      // }
       draw() {
-        if (fireballImg.complete && fireballImg.naturalWidth !== 0) {
-          ctx.drawImage(fireballImg, this.x, this.y, this.size, this.size);
-        } else {
-          ctx.fillStyle = "orange";
-          ctx.beginPath();
-          ctx.arc(this.x + this.size / 2, this.y + this.size / 2, this.size / 2, 0, 2 * Math.PI);
-          ctx.fill();
-        }
-      }
+    if (fireballImg.complete && fireballImg.naturalWidth !== 0) {
+        ctx.drawImage(fireballImg, this.x, this.y, this.size * 2, this.size * 2);
+    } else {
+        ctx.fillStyle = "orange";
+        ctx.beginPath();
+        ctx.arc(this.x + this.size, this.y + this.size, this.size, 0, 2 * Math.PI);
+        ctx.fill();
+    }
+}
+
     }
 
     // Array de bolas de fuego
